--- a/ComicBookApp/MainPage.xaml
+++ b/ComicBookApp/MainPage.xaml
@@ -7,7 +7,58 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-      
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <RelativePanel>
+            <Button Name="HamBurgerButton"
+                    RelativePanel.AlignLeftWithPanel="True" FontFamily="Segoe MDL2 Assets" 
+                    Content="&#xE700;" Width="45" Height="45"
+                    HorizontalAlignment="Center" Click="HamBurgerButton_Click"/>
+            <TextBlock RelativePanel.RightOf="HamBurgerButton" FontSize="20" 
+                       FontWeight="Bold" Name="TitleTextBlock"
+                       Margin="30,0,0,0"/>
+            <AutoSuggestBox Name="AutoSegestBox" QueryIcon="Find"
+                            PlaceholderText="Search" RelativePanel.AlignRightWithPanel="True"
+                            Width="200" Margin="0,0,0,15"/>
+        </RelativePanel>
+
+        <SplitView Name="SlpitView" Grid.Row="1" DisplayMode="CompactOverlay"
+                   OpenPaneLength="150" CompactPaneLength="45">
+            <SplitView.Pane>
+                <ListBox SelectionMode="Single" SelectionChanged="ListBox_SelectionChanged">
+                    <ListBoxItem Name="Character">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="&#xE77B;"
+                                       FontFamily="Segoe MDL2 Assets"
+                                       FontSize="20"/>
+                            <TextBlock Text="Characters"
+                                       FontSize="18" Margin="20,0,0,0"/>
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem Name="Comics">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="&#xE8F1;"
+                                       FontFamily="Segoe MDL2 Assets"
+                                       FontSize="20"/>
+                            <TextBlock Text="Comics"
+                                       FontSize="18" Margin="20,0,0,0"/>
+                        </StackPanel>
+                    </ListBoxItem>
+                </ListBox>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <GridView Name="CharacterComicGrid" HorizontalAlignment="Stretch" Margin="10,0,0,0">
+                    <GridView.ItemTemplate>
+                        <DataTemplate>
+                            
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </Page>
