--- a/ComicBookApp/ComicView.xaml
+++ b/ComicBookApp/ComicView.xaml
@@ -12,40 +12,61 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="NarrowLayout">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="WideLayout">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="900" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        
+                        
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+        
         <ListView Name="MasterListView" ItemsSource="{x:Bind MarvelComics}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="data:ComicComic">
-                    <StackPanel Orientation="Horizontal" Margin="10,5,0,5">
-                        <Rectangle Width="45" Height="45">
+                    <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
+                        <Rectangle  Width="150" Height="150" >
                             <Rectangle.Fill>
-                                <ImageBrush ImageSource="{x:Bind thumbnail.small}" />
+                                <ImageBrush ImageSource="{x:Bind thumbnail.extraLarge}" />
                             </Rectangle.Fill>
                         </Rectangle>
-                        <TextBlock Text="{x:Bind title}"
-                                   VerticalAlignment="Center"
-                                   Margin="10,0,0,0"
-                                   FontSize="18" />
-                    </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="10,0,10,0">
+                            <TextBlock TextAlignment="Justify" Text="{x:Bind title}"
+                                    VerticalAlignment="Center"
+                                    TextWrapping="Wrap"
+                                    Margin="10,0,10,0"
+                                    FontSize="18"/>
+                            <TextBlock Text="{x:Bind description  }" TextWrapping="Wrap" 
+                                            Margin="10,10,10,0" TextAlignment="Justify"/>
+                           
+                        </StackPanel>
+                </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
-        <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0">
-
-        </Grid>
-
+        
         <TextBlock Text="Data provided by Marvel. © 2015 Marvel" 
                    VerticalAlignment="Center" 
                    HorizontalAlignment="Center" 
-                   Grid.ColumnSpan="2" 
                    Grid.Row="2" />
 
         <ProgressRing Name="MyProgressRing2"
