--- a/ComicBookApp/CharacterView.xaml
+++ b/ComicBookApp/CharacterView.xaml
@@ -9,51 +9,48 @@
     Loaded="Page_Loaded"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Style="{StaticResource MyGrid}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
-        <ListView Name="MasterListView" ItemsSource="{x:Bind MarvelCharacters}">
-            <ListView.ItemTemplate>
+       
+        <ListView Name="MasterListView" ItemsSource="{x:Bind MarvelCharacters}" Grid.Row="0">
+            <ListView.ItemTemplate >
                 <DataTemplate x:DataType="data:Character">
-                    <StackPanel Orientation="Horizontal" Margin="10,5,0,5">
+                    <StackPanel Orientation="Horizontal" Margin="10,5,20,5">
+                        <StackPanel>
+                            <TextBlock Text="{x:Bind name}"
+                                       VerticalAlignment="Center"
+                                       TextWrapping="Wrap"
+                                       Margin="10,0,20,0"
+                                       FontSize="18" />
+                            <TextBlock Grid.Row="1" Text="{x:Bind description }" TextWrapping="Wrap" Margin="10,0,20,0"/>
+                        </StackPanel>
                         <Ellipse Width="45" Height="45">
                             <Ellipse.Fill>
                                 <ImageBrush ImageSource="{x:Bind thumbnail.small}" />
                             </Ellipse.Fill>
-                        </Ellipse>
-                        <TextBlock Text="{x:Bind name}"
-                                   VerticalAlignment="Center"
-                                   Margin="10,0,0,0"
-                                   FontSize="18" />
+                        </Ellipse >
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0">
 
-        </Grid>
-
-        <TextBlock Text="Data provided by Marvel. © 2015 Marvel" 
+        <TextBlock Text="Data provided by Marvel. © 2016 Marvel" 
                    VerticalAlignment="Center" 
                    HorizontalAlignment="Center" 
-                   Grid.ColumnSpan="2" 
-                   Grid.Row="2" />
+                   Grid.Row="1" />
 
         <ProgressRing Name="MyProgressRing"
                       Width="100"
                       Height="100"
                       Foreground="Gray"
-                      Grid.ColumnSpan="2"
-                      Grid.RowSpan="3"
+                      Grid.RowSpan="1"
                       VerticalAlignment="Center"
                       HorizontalAlignment="Center" />
 
