--- a/ComicBookApp/ComicView.xaml
+++ b/ComicBookApp/ComicView.xaml
@@ -9,97 +9,91 @@
     Loaded="Page_Loaded"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="30" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <Grid Style="{StaticResource MyGrid}">
+        <ScrollViewer>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState x:Name="NarrowLayout">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
+                <!--   <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup>
+                    <VisualState x:Name="NarrowLayout">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="0" />
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
                         
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="WideLayout">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="900" />
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
+                        </VisualState.Setters>
+                    </VisualState>
+                    <VisualState x:Name="WideLayout">
+                        <VisualState.StateTriggers>
+                            <AdaptiveTrigger MinWindowWidth="900" />
+                        </VisualState.StateTriggers>
+                        <VisualState.Setters>
                         
                         
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        
-        <ListView Name="ComicListView" ItemsSource="{x:Bind MarvelComics}">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="data:ComicComic">
-                    <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
-                        <Image Source="{x:Bind thumbnail.extraLarge}" Width="200" Height="200" />
-                        <StackPanel Orientation="Vertical" Margin="10,0,10,0">
-                            <TextBlock Text="{x:Bind title}"
-                                    VerticalAlignment="Center"
-                                    TextWrapping="Wrap"
-                                    Margin="10,0,10,0"
-                                    FontSize="18"/>
-                            <TextBlock Text="{x:Bind description  }" TextWrapping="Wrap" 
-                                            Margin="10,10,10,0" />
-                           
-                        </StackPanel>
-                </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>-->
 
-        <Grid Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" 
-                  VerticalAlignment="Top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition MaxWidth="700"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+                <ListView Name="ComicListView" ItemsSource="{x:Bind MarvelComics}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="data:ComicComic">
+                            <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
+                                <Image Source="{x:Bind thumbnail.extraLarge}" Width="200" Height="200" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
-            <ListView Name="ComicNameAndDescription" ItemsSource="{x:Bind MarvelComics}" >
-                <ListView.ItemTemplate >
-                    <DataTemplate x:DataType="data:ComicComic">
-                        <StackPanel Orientation="Vertical" Margin="10,0,0,0" >
-                            <TextBlock Text="{x:Bind title}"
-                                            VerticalAlignment="Center"
-                                            TextWrapping="Wrap"
-                                            Margin="10,0,0,0"
-                                            FontSize="18"/>
-                            <TextBlock Text="{x:Bind description  }" TextWrapping="Wrap" 
-                                                    Margin="10,10,10,0" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>
+                <Grid Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" 
+                      VerticalAlignment="Top">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MaxWidth="700"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-        <TextBlock Text="Data provided by Marvel. © 2015 Marvel" 
-                   VerticalAlignment="Center" 
-                   HorizontalAlignment="Center" 
-                   Grid.Row="2" />
+                    <ListView Name="ComicNameAndDescription" ItemsSource="{x:Bind MarvelComics}" >
+                        <ListView.ItemTemplate >
+                            <DataTemplate x:DataType="data:ComicComic">
+                                <StackPanel Orientation="Vertical" Margin="10,0,0,0" >
+                                    <TextBlock Text="{x:Bind title}"
+                                                VerticalAlignment="Center"
+                                                TextWrapping="Wrap"
+                                                FontSize="18"/>
+                                    <TextBlock Text="{x:Bind description  }" TextWrapping="Wrap" 
+                                                        Margin="0,10,10,0" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
 
-        <ProgressRing Name="MyProgressRing2"
-                      Width="100"
-                      Height="100"
-                      Foreground="Gray"
-                      Grid.ColumnSpan="2"
-                      Grid.RowSpan="3"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Center" />
+                <TextBlock Text="Data provided by Marvel. © 2015 Marvel" 
+                       VerticalAlignment="Center" 
+                       HorizontalAlignment="Center" 
+                       Grid.Row="1" 
+                       Grid.ColumnSpan="2"/>
+
+                <ProgressRing Name="MyProgressRing2"
+                          Width="100"
+                          Height="100"
+                          Foreground="Gray"
+                          Grid.ColumnSpan="2"
+                          Grid.RowSpan="3"
+                          VerticalAlignment="Center"
+                          HorizontalAlignment="Center" />
+            </Grid>
+        </ScrollViewer>
     </Grid>
    
 </Page>
