--- a/ComicBookApp/MainPage.xaml
+++ b/ComicBookApp/MainPage.xaml
@@ -82,6 +82,15 @@
                                        Style="{StaticResource MyTextBlock1}" Margin="20,0,0,0"/>
                         </StackPanel>
                     </ListBoxItem>
+                    <ListBoxItem Name="Creators">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="&#xE70F;"
+                                       FontFamily="Segoe MDL2 Assets"
+                                       Style="{StaticResource MyTextBlock1}"/>
+                            <TextBlock Text="Creators"
+                                       Style="{StaticResource MyTextBlock1}" Margin="20,0,0,0"/>
+                        </StackPanel>
+                    </ListBoxItem>
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
